Implement all 15 backend modules with DTOs, relationships, validation, JWT, and workflow testing